--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,ejs",
-    "start:prod": "node index.js",
-    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
-    "test": "NODE_ENV=test jest --detectOpenHandles",
-    "prepare": "husky install"
+    "start": "node index.js",
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
@@ -23,14 +20,15 @@
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.23.2",
+    "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.24.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
